# Token-Wallet-on-ICP-Blockchain

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/ipc_token_wallet_backend/: Cargo.toml
src/ipc_token_wallet_backend/src/: lib.rs  test.rs
src/ipc_token_wallet_frontend/: index.html  package-lock.json  package.json
src/ipc_token_wallet_frontend/src/: App.jsx  api.js  main.jsx  vite.config.js
src/ipc_token_wallet_frontend/src/Styles/: App.css  ReceiveToken.css  SendToken.css
src/ipc_token_wallet_frontend/src/components/: Balance.jsx  ReceiveTokens.jsx  SendTokens.jsx
