[package]
name = "ipc_token_wallet_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.7"       # For ICP canister development
ic-cdk-macros = "0.7" # Macros to simplify canister creation
candid = "0.8"        # For serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
